Fixed bug for 1.3.1

--- a/fillerword.ipynb
+++ b/fillerword.ipynb
@@ -688,10 +688,10 @@
     "def random_positives(positives_audionames):\n",
     "    \"\"\"\n",
     "    Given a list of positive audio names\n",
-    "    Return a list of 0-3 randomly selected positive audios\n",
+    "    Return a list of 0-4 randomly selected positive audios\n",
     "    \"\"\"\n",
-    "    # determine number of positives to generate: 0-3\n",
-    "    num_pos = np.random.randint(0, 4)\n",
+    "    # determine number of positives to generate: 0-4\n",
+    "    num_pos = np.random.randint(0, 5)\n",
     "    if num_pos == 0:\n",
     "        return []\n",
     "    # generate n random audios\n",
@@ -806,9 +806,6 @@
     "    Creates a training examples with a given background, positives, and negatives with id.\n",
     "    \n",
     "    Arguments:\n",
-    "    background -- a 10 second background audio recording\n",
-    "    positives -- a list of 0-3 audio segments of the word \"activate\"\n",
-    "    negatives -- a list of 0-2 audio segments of random words that are not \"activate\"\n",
     "    id -- an id is given such that the new files does not replace the previous files\n",
     "    \n",
     "    Returns:\n",
@@ -833,11 +830,11 @@
     "    previous_segments = []    \n",
     "    \n",
     "    # Step 3: Loop over randomly selected \"activate\" clips and insert in background\n",
-    "    for random_activate in positives:\n",
-    "        if cannot_insert(random_activate, previous_segments):\n",
-    "            return create_training_example(background, positives, negatives, id)\n",
+    "    for random_positive in positives:\n",
+    "        if cannot_insert(random_positive, previous_segments):\n",
+    "            return create_training_example(id)\n",
     "        # Insert the audio clip on the background\n",
-    "        background, segment_time = insert_audio_clip(background, random_activate, previous_segments)\n",
+    "        background, segment_time = insert_audio_clip(background, random_positive, previous_segments)\n",
     "        # Retrieve segment_start and segment_end from segment_time\n",
     "        segment_start, segment_end = segment_time\n",
     "        # Insert labels in \"y\"\n",
@@ -846,7 +843,7 @@
     "    # Step 4: Loop over randomly selected negative clips and insert in background\n",
     "    for random_negative in negatives:\n",
     "        if cannot_insert(random_negative, previous_segments):\n",
-    "            return create_training_example(background, positives, negatives, id)\n",
+    "            return create_training_example(id)\n",
     "        # Insert the audio clip on the background \n",
     "        background, _ = insert_audio_clip(background, random_negative, previous_segments)\n",
     "\n",
