Add model training to notebook

--- a/fillerword.ipynb
+++ b/fillerword.ipynb
@@ -26,18 +26,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\wzy\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\pydub\\utils.py:165: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
-      "  warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n",
-      "c:\\users\\wzy\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\pydub\\utils.py:179: RuntimeWarning: Couldn't find ffplay or avplay - defaulting to ffplay, but may not work\n",
-      "  warn(\"Couldn't find ffplay or avplay - defaulting to ffplay, but may not work\", RuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from pydub import AudioSegment\n",
@@ -53,7 +42,14 @@
     "from tf_utils import *\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import signal\n",
-    "from scipy.io import wavfile"
+    "from scipy.io import wavfile\n",
+    "\n",
+    "# Import files for trigger-word detection model\n",
+    "from keras.callbacks import ModelCheckpoint\n",
+    "from keras.models import Model, load_model, Sequential\n",
+    "from keras.layers import Dense, Activation, Dropout, Input, Masking, TimeDistributed, LSTM, Conv1D\n",
+    "from keras.layers import GRU, Bidirectional, BatchNormalization, Reshape\n",
+    "from keras.optimizers import Adam"
    ]
   },
   {
@@ -75,7 +71,10 @@
     "NEGATIVES_TRUNCATED_DIRECTORY = \"./raw_data/google_dataset_truncated/\"\n",
     "AUDIO_EXAMPLES_DIRECTORY = \"./audio_examples/\"\n",
     "POSITIVE_EXAMPLE = \"jh_1.wav\"\n",
-    "AUDIO_EXAMPLE = \"example_train.wav\""
+    "AUDIO_EXAMPLE = \"example_train.wav\"\n",
+    "STUB_TRAIN_DIRECTORY = \"./stub_data/XY_Train/\"\n",
+    "STUB_DEV_DIRECTORY = \"./stub_data/XY_Dev/\"\n",
+    "STUB_MODEL = \"./stub_data/models/tr_model.h5\""
    ]
   },
   {
@@ -947,10 +946,161 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GRADED FUNCTION: model\n",
+    "\n",
+    "def model(input_shape):\n",
+    "    \"\"\"\n",
+    "    Function creating the model's graph in Keras library.\n",
+    "    \n",
+    "    Argument:\n",
+    "    input_shape -- shape of the model's input data (using Keras conventions)\n",
+    "    \n",
+    "    Returns:\n",
+    "    model -- Keras model instance\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    X_input = Input(shape = input_shape)\n",
+    "    \n",
+    "    # Step 1: CONV Layer\n",
+    "    # CONV-1D\n",
+    "    X = Conv1D(filters=196, kernel_size=15, strides=4)(X_input)\n",
+    "    # Batch Normalization\n",
+    "    X = BatchNormalization()(X)\n",
+    "    # RelU activation\n",
+    "    X = Activation(\"relu\")(X)\n",
+    "    # Dropout (using rate 0.8)\n",
+    "    X = Dropout(rate=0.8)(X)\n",
+    "    \n",
+    "    # Step 2: First GRU Layer\n",
+    "    # GRU (use 128 units to return the sequences)\n",
+    "    X = GRU(units=128, return_sequences=True)(X)\n",
+    "    # Dropout (using rate 0.8)\n",
+    "    X = Dropout(rate=0.8)(X)\n",
+    "    # Batch Normalization\n",
+    "    X = BatchNormalization()(X)\n",
+    "    \n",
+    "    # Step 3: Second GRU Layer\n",
+    "    # GRU (use 128 units to return the sequences)\n",
+    "    X = GRU(units=128, return_sequences=True)(X)\n",
+    "    # Dropout (using rate 0.8)\n",
+    "    X = Dropout(rate=0.8)(X)\n",
+    "    # Batch Normalization\n",
+    "    X = BatchNormalization()(X)\n",
+    "    # Dropout (using rate 0.8)\n",
+    "    X = Dropout(rate=0.8)(X)\n",
+    "    \n",
+    "    # Step 4: Time-distributed dense layer\n",
+    "    X = TimeDistributed(Dense(1, activation=\"sigmoid\"))(X)\n",
+    "    \n",
+    "    # Return model\n",
+    "    model = Model(inputs = [X_input], outputs = X)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Input' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-a947c2b9c170>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mTx_stub\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5511\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mn_freq_stub\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m101\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTx_stub\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_freq_stub\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-f85b1952b73a>\u001b[0m in \u001b[0;36mmodel\u001b[0;34m(input_shape)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \"\"\"\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mX_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mInput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# Step 1: CONV Layer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Input' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the model returned by model() function\n",
+    "# Using stub data\n",
+    "Tx_stub = 5511\n",
+    "n_freq_stub = 101\n",
+    "model = model(input_shape = (Tx_stub, n_freq_stub))\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to fit and further train the model\n",
+    "def model_train(model, X, Y):\n",
+    "    \"\"\"\n",
+    "    Function to train the model further using Adam optimiser and binary \n",
+    "    cross entropy loss.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    model -- Model to train\n",
+    "    X -- X data to train on\n",
+    "    Y -- Y data to train on\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    opt = Adam(lr=0.0001, beta_1=0.9, beta_2=0.999, decay=0.01)\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
+    "    \n",
+    "    model.fit(X, Y, batch_size=5, epochs=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-1ba7f02fe967>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Train the model on stubbed data downloaded from Coursera\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSTUB_MODEL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSTUB_TRAIN_DIRECTORY\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"X.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mY\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSTUB_TRAIN_DIRECTORY\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"Y.npy\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_model' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model on stubbed data downloaded from Coursera\n",
+    "model = load_model(STUB_MODEL)\n",
+    "X = np.load(STUB_TRAIN_DIRECTORY + \"X.npy\")\n",
+    "Y = np.load(STUB_TRAIN_DIRECTORY + \"Y.npy\")\n",
+    "\n",
+    "model_train(model, X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Function to test the model on new data\n",
+    "def model_test(model, X_dev, Y_dev):\n",
+    "    loss, acc = model.evaluate(X_dev, Y_dev)\n",
+    "    print(\"Dev set accuracy = \", acc)\n",
+    "\n",
+    "X_dev = np.load(STUB_DEV_DIRECTORY + \"X_dev.npy\")\n",
+    "Y_dev = np.load(STUB_DEV_DIRECTORY + \"Y_dev.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_test(model, X_dev, Y_dev)"
+   ]
   }
  ],
  "metadata": {
@@ -970,7 +1120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.7"
   },
   "mimetype": "text/x-python",
   "name": "python",
