--- a/fillerword.ipynb
+++ b/fillerword.ipynb
@@ -16,6 +16,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pygame\n",
+      "  Downloading pygame-1.9.6-cp37-cp37m-win_amd64.whl (4.3 MB)\n",
+      "Installing collected packages: pygame\n",
+      "Successfully installed pygame-1.9.6\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,14 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.6\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from pydub import AudioSegment\n",
     "from pydub.playback import play\n",
     "import random\n",
+    "import pygame\n",
     "import sys\n",
     "import io\n",
     "import os\n",
@@ -39,6 +67,7 @@
     "import IPython\n",
     "import wave\n",
     "import pylab\n",
+    "import simpleaudio\n",
     "from tf_utils import *\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import signal\n",
@@ -54,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,17 +140,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time steps in input after spectrogram (129, 2142)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# _, data = wavfile.read(AUDIO_EXAMPLES_DIRECTORY + AUDIO_EXAMPLE)\n",
     "# print(\"Time steps in audio recording before spectrogram\", data[:,0].shape)\n",
@@ -130,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,6 +188,7 @@
     "    positives = []\n",
     "    backgrounds = []\n",
     "    negatives = []\n",
+    "    pygame.init()\n",
     "    for filename in os.listdir(positiveDirectory):\n",
     "        if filename.endswith(\"wav\"):\n",
     "            activate = AudioSegment.from_wav(positiveDirectory + filename)\n",
@@ -187,18 +209,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-50-d3593d97e4e9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mpositives\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnegatives\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbackgrounds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_raw_audio\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mPOSITIVE_DIRECTORY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBACKGROUND_DIRECTORY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mNEGATIVES_TRUNCATED_DIRECTORY\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Truncated negative dataset. Use this to save time.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbackgrounds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m10000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Should be 10,000 since it is a 10s clip\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32massert\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpositives\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m2000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Maybe around 1000, since a positive audio clip is usually around 1 sec (but varies a lot)\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32massert\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnegatives\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[1;36m2000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Maybe around 1000, since a negative audio clip is usually around 1 sec (but varies a lot)\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+     ]
+    }
+   ],
    "source": [
     "# Load audio segments using pydub \n",
-    "# positives, negatives, backgrounds = load_raw_audio(POSITIVE_DIRECTORY, BACKGROUND_DIRECTORY, NEGATIVES_DIRECTORY)  # Actual dataset. Use this for production.\n",
+    "#positives, negatives, backgrounds = load_raw_audio(POSITIVE_DIRECTORY, BACKGROUND_DIRECTORY, NEGATIVES_DIRECTORY)  # Actual dataset. Use this for production.\n",
     "positives, negatives, backgrounds = load_raw_audio(POSITIVE_DIRECTORY, BACKGROUND_DIRECTORY, NEGATIVES_TRUNCATED_DIRECTORY) # Truncated negative dataset. Use this to save time.\n",
     "\n",
     "assert len(backgrounds[0]) == 10000, \"Should be 10,000 since it is a 10s clip\"\n",
     "assert 0 < len(positives[0]) < 2000, \"Maybe around 1000, since a positive audio clip is usually around 1 sec (but varies a lot)\"\n",
     "assert 0 < len(negatives[0]) < 2000, \"Maybe around 1000, since a negative audio clip is usually around 1 sec (but varies a lot)\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -524,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "mimetype": "text/x-python",
   "name": "python",
