Uncomment test case

--- a/CreateExamples.ipynb
+++ b/CreateExamples.ipynb
@@ -442,11 +442,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Test case\n",
-    "# test_audio = AudioSegment.from_wav(POSITIVE_DIRECTORY + POSITIVE_EXAMPLE)\n",
-    "# print(len(test_audio))\n",
-    "# print(cannot_insert(test_audio, [(2071, 3000), (5072, 6000), (8072, 9000)])) # No available slot possible\n",
-    "# print(cannot_insert(test_audio, [(1000, 2000), (3000, 4000)])) # Available slot present"
+    "# Test case\n",
+    "test_audio = AudioSegment.from_wav(POSITIVE_DIRECTORY + POSITIVE_EXAMPLE)\n",
+    "print(len(test_audio))\n",
+    "print(cannot_insert(test_audio, [(2071, 3000), (5072, 6000), (8072, 9000)])) # No available slot possible\n",
+    "print(cannot_insert(test_audio, [(1000, 2000), (3000, 4000)])) # Available slot present"
    ]
   },
   {
