Update prediction to resize time units in array

--- a/model.ipynb
+++ b/model.ipynb
@@ -175,7 +175,7 @@
     "AUDIO_EXAMPLES_DIRECTORY = \"./audio_examples/\"\n",
     "POSITIVE_EXAMPLE = \"jh_1.wav\"\n",
     "AUDIO_EXAMPLE = \"example_train.wav\"\n",
-    "CHIME_EXAMPLE = \"chime.wav\""
+    "CHIME_FILE = \"./filler_detection/audio_examples/chime.wav\""
    ]
   },
   {
@@ -246,7 +246,7 @@
     "    X = TimeDistributed(Dense(1, activation=\"sigmoid\"))(X)\n",
     "    \n",
     "    # Return model\n",
-    "    model = Model(inputs = [X_input], outputs = X)\n",
+    "    model = Model(inputs = X_input, outputs = X)\n",
     "    return model"
    ]
   },
@@ -440,8 +440,8 @@
    "source": [
     "# Train the model on stubbed data downloaded from Coursera\n",
     "# model = load_model(STUB_MODEL)\n",
-    "X = np.load(\"X_1.npy\")\n",
-    "Y = np.load(\"Y_1.npy\")\n",
+    "X = np.load(f\"{DATA_PATH}/X_1.npy\")\n",
+    "Y = np.load(f\"{DATA_PATH}/Y_1.npy\")\n",
     "\n",
     "model_train(model, X, Y)"
    ]
@@ -553,6 +553,8 @@
     "    \n",
     "    # the spectrogram outputs (freqs, Tx) and we want (Tx, freqs) to input into the model\n",
     "    x  = x.swapaxes(0,1)\n",
+    "    # Reshape the x array in case the time inputs have more columns\n",
+    "    x = np.delete(x, np.s_[Tx:], axis=0)\n",
     "    x = np.expand_dims(x, axis=0)\n",
     "    \n",
     "    predictions = model.predict(x)\n",
@@ -574,7 +576,7 @@
     "    threshold -- Probability above which trigger word considered present\n",
     "    \"\"\"\n",
     "    audio_clip = AudioSegment.from_wav(filename)\n",
-    "    chime = AudioSegment.from_wav(chime_file)\n",
+    "    chime = AudioSegment.from_wav(CHIME_FILE)\n",
     "    predictions = detect_triggerword(filename)\n",
     "    Ty = predictions.shape[1]\n",
     "    \n",
