Edit gen_cont_eg and predict filepaths to work on both local and colab

--- a/generate_continuous_training_examples.ipynb
+++ b/generate_continuous_training_examples.ipynb
@@ -347,22 +347,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X:(1, 5490, 129) Y:(1, 1369, 1)\n"
+      "X:(100, 5490, 129) Y:(100, 1369, 1)\n"
      ]
     }
    ],
    "source": [
-    "X, Y = create_X_Y(50, 1)\n",
+    "X, Y = create_X_Y(100, 1)\n",
     "print(\"X:{} Y:{}\".format(X.shape, Y.shape))\n",
-    "np.save(\"./training_data/X_dev.npy\", X)\n",
-    "np.save(\"./training_data/Y_dev.npy\", Y)"
+    "np.save(\"./training_data/dev_set/X_dev.npy\", X)\n",
+    "np.save(\"./training_data/dev_set/Y_dev.npy\", Y)"
    ]
   },
   {
