--- a/predict_file.ipynb
+++ b/predict_file.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,18 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "REPO = \"./filler_detection/\"\n",
+    "LOCAL_MACHINE_DIRECTORY = \"./\"\n",
+    "COLAB_DIRECTORY = \"./filler-detection\"\n",
+    "REPO_DIRECTORY = LOCAL_MACHINE_DIRECTORY # set this!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "POSITIVE_DIRECTORY = \"raw_data/positive_data/\"\n",
     "BACKGROUND_DIRECTORY = \"raw_data/background_data/\"\n",
     "NEGATIVES_DIRECTORY = \"raw_data/google_dataset/\"\n",
     "NEGATIVES_TRUNCATED_DIRECTORY = \"raw_data/google_dataset_truncated/\"\n",
     "AUDIO_EXAMPLES_DIRECTORY = \"audio_examples/\"\n",
     "POSITIVE_EXAMPLE = \"jh_1.wav\"\n",
-    "AUDIO_EXAMPLE = \"example_train.wav\""
+    "AUDIO_EXAMPLE = \"example_train.wav\"\n",
+    "CHIME_FILE = \"audio_examples/chime.wav\""
    ]
   },
   {
@@ -103,11 +114,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+      "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+      "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+      "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+      "Model: \"model_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_2 (InputLayer)         (None, 5490, 129)         0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_2 (Conv1D)            (None, 1369, 196)         379456    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_4 (Batch (None, 1369, 196)         784       \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 1369, 196)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_5 (Dropout)          (None, 1369, 196)         0         \n",
+      "_________________________________________________________________\n",
+      "gru_3 (GRU)                  (None, 1369, 128)         124800    \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 1369, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_5 (Batch (None, 1369, 128)         512       \n",
+      "_________________________________________________________________\n",
+      "gru_4 (GRU)                  (None, 1369, 128)         98688     \n",
+      "_________________________________________________________________\n",
+      "dropout_7 (Dropout)          (None, 1369, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_6 (Batch (None, 1369, 128)         512       \n",
+      "_________________________________________________________________\n",
+      "dropout_8 (Dropout)          (None, 1369, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "time_distributed_2 (TimeDist (None, 1369, 1)           129       \n",
+      "=================================================================\n",
+      "Total params: 604,881\n",
+      "Trainable params: 603,977\n",
+      "Non-trainable params: 904\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "model = load_model(f\"{REPO}trained_model.h5\")\n",
+    "# for local machine\n",
+    "model = load_model(\"./new_trained_model.h5\")\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
+      "Model: \"model_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_2 (InputLayer)         (None, 5490, 129)         0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_2 (Conv1D)            (None, 1369, 196)         379456    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_4 (Batch (None, 1369, 196)         784       \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 1369, 196)         0         \n",
+      "_________________________________________________________________\n",
+      "dropout_5 (Dropout)          (None, 1369, 196)         0         \n",
+      "_________________________________________________________________\n",
+      "gru_3 (GRU)                  (None, 1369, 128)         124800    \n",
+      "_________________________________________________________________\n",
+      "dropout_6 (Dropout)          (None, 1369, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_5 (Batch (None, 1369, 128)         512       \n",
+      "_________________________________________________________________\n",
+      "gru_4 (GRU)                  (None, 1369, 128)         98688     \n",
+      "_________________________________________________________________\n",
+      "dropout_7 (Dropout)          (None, 1369, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_6 (Batch (None, 1369, 128)         512       \n",
+      "_________________________________________________________________\n",
+      "dropout_8 (Dropout)          (None, 1369, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "time_distributed_2 (TimeDist (None, 1369, 1)           129       \n",
+      "=================================================================\n",
+      "Total params: 604,881\n",
+      "Trainable params: 603,977\n",
+      "Non-trainable params: 904\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for colab\n",
+    "model = load_model(f\"{REPO_DIRECTORY}/new_trained_model.h5\")\n",
     "model.summary()"
    ]
   },
@@ -120,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,13 +323,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PREPROCESSING...\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'CHIME_FILE' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-efe4aeb467fd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Enter filename and probability threshold for determining filler word\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcount_filler_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./audio_ignored_examples/train_10.wav'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-10-8473d66a2a6a>\u001b[0m in \u001b[0;36mcount_filler_word\u001b[0;34m(filename, threshold)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mpreprocess_audio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0maudio_clip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAudioSegment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_wav\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mchime\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAudioSegment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_wav\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCHIME_FILE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m     \u001b[0mpredictions\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdetect_triggerword\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mTy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredictions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'CHIME_FILE' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Enter filename and probability threshold for determining filler word\n",
+    "count_filler_word('./audio_ignored_examples/train_10.wav', 0.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Enter filename and probability threshold for determining filler word\n",
-    "count_filler_word('./Test_2.wav', 0.4)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -238,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
